test/spec_vectors/table/ok/module_11.wat
(module (table 0 funcref) (table 0 funcref))