test/spec_vectors/table/fail/module_18.wat
(module (table 1 0 funcref))